# DataAnalyses

./: What does what.txt
AnalysisResults/: 100_But_2Cluster.root  100_But_AllClusters.root  1400_H_2Cluster.root  1400_H_AllClusters.root  20140227_TaggEffVergleich_H_alteMitAktueller.root  20140427_F_falsche_TaggEff.root  20140427_F_richtigeTaggEff.root  CBADCs_nWordHeader_VS_Status_bad.root  CBADCs_nWordHeader_VS_Status_good.root  CBEnergyFitter_ResultBefore_140201.root  CBEnergyFitter_WithErrorBlocks.root  CBEnergyFitter_WithoutErrorBlocks.root  CBFitter_PIDCalibration.root  Check_CBESum_SepOnly.root  F_AllEvents_ButM20percentMore_chCorrectionAll.root  F_AllEvents_chCorrectionAll.root  F_FebOnly_AllEvents_chCorrectionAll.root  F_SepOnly_AllEvents_chCorrectionAll.root  F_WOErrorEvents_chCorrectionAll.root  F_WOErrorEvents_chCorrectionAll_3People.root  F_WOPID_140221.root  F_WithErrorEvents_chCorrectionButH.root  F_WithPID_140221.root  File100_CB_ESum_ErrorEvents.root  File100_CB_ESum_GoodEvents.root  File1400_CB_ESum_ErrorEvents.root  (+15 more)
NewWorker/: CMakeLists.txt
NewWorker/source/: CBClusterFinder.cc  CBNeighbours.h  CBPID_MarkChargedClusters.cc  ConvertionRaw2Units.cc  DictOutput.cc  DictOutput.h  ExportTreeFile.cc  ExportTreeFile.h  FillNHitsHistograms.cc  GeneralConstants.h  HOWTOGenerateROOTDictionaries.txt  Linkdef.h  NTECBitPatternTest.cc  PhysicsAnalysis.cc  ProcessDataFileMk1.cc  ProcessDataFileMk2.cc  RawADCDataVars.h  ReadCalibrationFiles.cc  ReadRawDataFile.cc  TA2CBKinematicFitter.cc  TA2CBKinematicFitter.h  TA2KFParticle.cc  TA2KFParticle.h  Worker.cc  Worker.h
(+962 files in other folders)
